# kbeta-transformer2d

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  LICENSE  MANIFEST.in  README.md  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
src/kbeta_transformer2d/: __init__.py  data.py  demo_heat2d.py  io_utils.py  model.py  optim_factory.py  plot_utils.py  train.py  utils.py
src/kbeta_transformer2d/configs/: heat2d.yml  paper.yml  quick_test.yml
tests/: test_imports.py  test_smoke.py
