[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kbeta-transformer2d"
version = "0.0.0a1"
description = "2‑D heat‑diffusion Transformer demo for the Kourkoutas‑β optimiser"
authors = [{name = "Stavros Kassinos", email = "kassinos.stavros@ucy.ac.cy"}]
readme = "README.md"
requires-python = ">=3.9"

# --- runtime deps (imported at run‑time) ----------
dependencies = [
    "numpy",
    "pyyaml",
    "mlx>=0.27.1",
    "matplotlib>=3.7",      # for plot_utils
    "seaborn>=0.13",        # violin / density plots
    "pandas>=2.0",          # violin‑plot helper
    "kbeta>=0.0.0a0",        # kourkoutas optimizer
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "black",
    "mypy",
    "build",
    # local sibling package (ref uses main by default; dev‑branch not required)
    #"kbeta @ file:///Users/m2/PycharmProjects/kbeta",           # local path
    # If CI needs it from GitHub (private‑repo token handled in workflow):
    # "kbeta @ git+https://github.com/sck-at-ucy/kbeta.git@main",
]

[tool.setuptools.packages.find]
where   = ["src"]
include = ["kbeta_transformer2d*"]
