[build-system]
requires      = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name            = "kbeta-transformer2d"
version         = "1.0.0"
description     = "2-D Heat-Diffusion Transformer benchmark for Kourkoutas-β"
authors         = [{name = "Stavros Kassinos"}]
readme          = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.9"

# --- runtime deps (imported at run-time) ----------
dependencies = [
    "numpy",
    "pyyaml",
    "mlx>=0.27.1",
    "matplotlib>=3.7",
    "seaborn>=0.13",
    "pandas>=2.0",
    "kbeta>=1.0.0,<2",
]

classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS :: MacOS X",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Physics",
]

[project.urls]
Homepage      = "https://github.com/sck-at-ucy/kbeta-transformer2d"
Documentation = "https://github.com/sck-at-ucy/kbeta-transformer2d"
Repository    = "https://github.com/sck-at-ucy/kbeta-transformer2d"

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "mypy",
]

repro = [
    "mlx==0.26.3",
    "kbeta==1.0.0",
    "numpy",
    "pyyaml",
    "matplotlib>=3.7",
    "seaborn>=0.13",
    "pandas>=2.0",
    "pytest",
    "ruff",
    "mypy",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where   = ["src"]
include = ["kbeta_transformer2d*"]

[tool.setuptools.package-data]
"kbeta_transformer2d" = ["py.typed"]

# -------------------------------------------
# Ruff configuration
# -------------------------------------------
[tool.ruff]
target-version = "py311"
line-length    = 88
src            = ["src", "tests"]
exclude        = [".venv*", "tests/.venv*"]

[tool.ruff.lint]
select = ["E", "F", "B", "I", "UP"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
